// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Shadow renders 1`] = `
{
  "Component": {
    "Frame": {
      "active": false,
      "alpha": 1,
      "attached": true,
      "boundsMargin": null,
      "children": {
        "Shadow": {
          "active": false,
          "alpha": 0.6,
          "attached": true,
          "boundsMargin": null,
          "clipping": false,
          "color": "ff000000",
          "enabled": true,
          "flex": false,
          "flexItem": false,
          "h": 0,
          "isComponent": undefined,
          "mount": 0,
          "mountX": 0,
          "mountY": 0,
          "pivot": 0.5,
          "pivotX": 0.5,
          "pivotY": 0.5,
          "ref": "Shadow",
          "renderOfScreen": undefined,
          "renderToTexture": false,
          "scale": 1,
          "scaleX": 1,
          "scaleY": 1,
          "state": undefined,
          "tag": [Function],
          "tags": [
            "Shadow",
          ],
          "texture": {
            "type": "StaticCanvasTexture",
          },
          "visible": true,
          "w": 0,
          "x": 0,
          "y": 32,
          "zIndex": 0,
        },
      },
      "clipping": false,
      "color": 4294967295,
      "enabled": true,
      "flex": false,
      "flexItem": false,
      "h": 344,
      "isComponent": undefined,
      "mount": 0.5,
      "mountX": 0.5,
      "mountY": 0.5,
      "pivot": 0.5,
      "pivotX": 0.5,
      "pivotY": 0.5,
      "ref": "Frame",
      "renderOfScreen": undefined,
      "renderToTexture": undefined,
      "scale": 1,
      "scaleX": 1,
      "scaleY": 1,
      "state": undefined,
      "tag": [Function],
      "tags": [
        "Frame",
      ],
      "visible": true,
      "w": 312,
      "x": 100,
      "y": 116,
      "zIndex": 0,
    },
  },
}
`;

exports[`Shadow renders with masked shadow 1`] = `
{
  "Component": {
    "Frame": {
      "active": false,
      "alpha": 1,
      "attached": true,
      "boundsMargin": null,
      "children": {
        "Shadow": {
          "active": false,
          "alpha": 0,
          "attached": true,
          "boundsMargin": null,
          "clipping": false,
          "color": "b3000000",
          "enabled": false,
          "flex": false,
          "flexItem": false,
          "h": 0,
          "isComponent": undefined,
          "mount": 0,
          "mountX": 0,
          "mountY": 0,
          "pivot": 0.5,
          "pivotX": 0.5,
          "pivotY": 0.5,
          "ref": "Shadow",
          "renderOfScreen": undefined,
          "renderToTexture": false,
          "scale": 1,
          "scaleX": 1,
          "scaleY": 1,
          "state": undefined,
          "tag": [Function],
          "tags": [
            "Shadow",
          ],
          "texture": {
            "type": "StaticCanvasTexture",
          },
          "visible": true,
          "w": 0,
          "x": 0,
          "y": 20,
          "zIndex": 0,
        },
      },
      "clipping": false,
      "color": 4294967295,
      "enabled": true,
      "flex": false,
      "flexItem": false,
      "h": 380,
      "isComponent": undefined,
      "mount": 0.5,
      "mountX": 0.5,
      "mountY": 0.5,
      "pivot": 0.5,
      "pivotX": 0.5,
      "pivotY": 0.5,
      "ref": "Frame",
      "renderOfScreen": undefined,
      "renderToTexture": true,
      "scale": 1,
      "scaleX": 1,
      "scaleY": 1,
      "state": undefined,
      "tag": [Function],
      "tags": [
        "Frame",
      ],
      "visible": true,
      "w": 340,
      "x": 100,
      "y": 120,
      "zIndex": 0,
    },
  },
}
`;

exports[`Shadow updates the shadow size 1`] = `
{
  "Component": {
    "Frame": {
      "active": true,
      "alpha": 1,
      "attached": true,
      "boundsMargin": null,
      "children": {
        "Shadow": {
          "active": true,
          "alpha": 0.6,
          "attached": true,
          "boundsMargin": null,
          "clipping": false,
          "color": "ff000000",
          "enabled": true,
          "flex": false,
          "flexItem": false,
          "h": 0,
          "isComponent": undefined,
          "mount": 0,
          "mountX": 0,
          "mountY": 0,
          "pivot": 0.5,
          "pivotX": 0.5,
          "pivotY": 0.5,
          "ref": "Shadow",
          "renderOfScreen": undefined,
          "renderToTexture": false,
          "scale": 1,
          "scaleX": 1,
          "scaleY": 1,
          "state": undefined,
          "tag": [Function],
          "tags": [
            "Shadow",
          ],
          "texture": {
            "type": "StaticCanvasTexture",
          },
          "visible": true,
          "w": 0,
          "x": 0,
          "y": 32,
          "zIndex": 0,
        },
      },
      "clipping": false,
      "color": 4294967295,
      "enabled": true,
      "flex": false,
      "flexItem": false,
      "h": 530,
      "isComponent": undefined,
      "mount": 0.5,
      "mountX": 0.5,
      "mountY": 0.5,
      "pivot": 0.5,
      "pivotX": 0.5,
      "pivotY": 0.5,
      "ref": "Frame",
      "renderOfScreen": undefined,
      "renderToTexture": undefined,
      "scale": 1,
      "scaleX": 1,
      "scaleY": 1,
      "state": undefined,
      "tag": [Function],
      "tags": [
        "Frame",
      ],
      "visible": true,
      "w": 480,
      "x": 200,
      "y": 225,
      "zIndex": 0,
    },
  },
}
`;
